# bigbang

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Presentation Summer School 2016.odp  README.md  _config.yml  conda-requirements.txt  conda-setup.sh  config.yml  data_access_permit_application.md  environment.yaml  environment.yml  git-readme.md  git_collector.py  icannmailinglistsApril182017.txt  index.html  index.md  listserv.py  params.json  parse.py  public-privacy.html  pyproject.toml  requirements.txt  setup.py  tograph.py
.github/workflows/: workflow-main.yaml  workflow-master.yaml
analysis/: listserv.py
archives/3GPP/: 3GPP_CT88_E_MEETING.mbox  3GPP_CT89_E_MEETING.mbox  3GPP_MEETING_HOSTING_COORD.mbox  3GPP_MENTORING.mbox  3GPP_RUN4RAN.mbox  3GPP_TSG_CT_WG1.mbox  3GPP_TSG_CT_WG1_122E_GENERAL.mbox  3GPP_TSG_CT_WG1_122E_SERVICES.mbox  3GPP_TSG_CT_WG3_PCC.mbox  3GPP_TSG_CT_WG4.mbox  3GPP_TSG_CT_WG4_E_MEETING.mbox  3GPP_TSG_GERAN_TDOC.mbox  3GPP_TSG_GERAN_WG1.mbox  3GPP_TSG_GERAN_WG2.mbox  3GPP_TSG_GERAN_WG3.mbox  3GPP_TSG_RAN_AHG1.mbox  3GPP_TSG_RAN_WG1_LTE.mbox  3GPP_TSG_RAN_WG2_UMTS_DRAFTS.mbox  3GPP_TSG_RAN_WG3.mbox  3GPP_TSG_RAN_WG4_AAS.mbox  3GPP_TSG_RAN_WG4_BANDS.mbox  3GPP_TSG_RAN_WG4_CA.mbox  3GPP_TSG_RAN_WG4_DRAFTS.mbox  3GPP_TSG_RAN_WG4_IOT.mbox  3GPP_TSG_RAN_WG5_ANALYTICS.mbox  (+2 more)
bigbang/: __init__.py  _io.py  abstract.py  archive.py  bigbang_io.py  cli.py  config.py  config.yml  data_types.py  distributions.r  domain.py  entity_resolution.py  get_dependencies.py  git_repo.py  graph.py  ietfattendance.py  io.py  listcsv.py  listserv.py  mailman.py  network.py  parse.py  plot.py  process.py  repo_loader.py  scraping.py  thread.py  twopeople.py  utils.py  w3c.py  w3crawl.py
config/: config.py  config.yml  icann_certificate.pem  paths.py
docs/: analysis.rst  api-docs.rst  conf.py  contributing.rst  data-access.rst  data-sources.rst  datasets.rst  datatracker.rst  docs_readme.md  git-readme.md  git.rst  index.rst  installation.rst  intro.rst  readme.rst  release-notes.rst  release_notes.rst  visualization.rst
examples/: Analyze Senders - Name and Gender.ipynb  Analyze Senders ICANN NCSG discuss - CCWP HR.ipynb  Analyze Senders.ipynb  Analyzing Mail Senders.ipynb  Assortativity Study ICANN.ipynb  Auditing Fernando.ipynb  CLBE Tutorial Materials.ipynb  Cohort Visualization ICANN.ipynb  Cohort Visualization.ipynb  Collaboration Robustness ICANN.ipynb  Collaboration Robustness.ipynb  Committer Dominance.ipynb  Corr between centrality and community 0.1 ICANN.ipynb.txt  Corr between centrality and community 0.1.ipynb  File Dependency Network.ipynb  Git Collection.ipynb  Git Commit Network.ipynb  Git Diffs.ipynb  Git Interaction Graph.ipynb  Git Loading Tutorials.ipynb  List Correlation.ipynb  List Cross Correlation.ipynb  MultiGitRepos.ipynb  OTHER_NOTEBOOKS.docx  Participants Over Time.ipynb  Plot Activity.ipynb  SUMMERSCHOOL_NOTEBOOKS.docx  Show Interaction Graph.ipynb  Single Word Trend ICANN.ipynb  Single Word Trend.ipynb  Special words analysis ICANN.ipynb  Special words analysis.ipynb  SummerSchool-RQ1.ipynb  SummerSchool-WhoSaidWhatWords.ipynb  SummerSchoolCompareWordRankings.ipynb  SummerSchoolConsolidateUserNames.ipynb  SummerSchoolCountEmailsInMailingList.ipynb  SummerSchoolFilterEmailByAuthors.ipynb  SummerSchoolFirstKeywordOccurrence.ipynb  SummerSchoolFirstUsage.ipynb  (+31 more)
git_data/: GitRepo.py  RepoLoader.py  Repos.py  collect_git.py  git_locals.json
stylesheets/: stylesheet.css
tests/: .coveragerc  2001-November.txt  bigbang_test.py  bigbang_test.py.bak  bigbang_test.py~  bigbang_tests.py  pytest.ini  test_bigbang_io.py  test_listserv.py
w3c-demographics/: Entity Resolution.ipynb  W3C Groups, Participation and Gender.ipynb  people_entity_resolution-ietf-privacy_updated.csv  w3c-current-lists.txt
(+318 files in other folders)
